test/ddc-spec/error/01-ErrorExp/55-ProjectTooManyCtors/Main.ds

module Main where

main () = (5).derp

